# pips_visualization

./: CMakeLists.txt  README.md  gazebo_notes.txt  package.xml  plugin_description.xml
data/: PathArrayView.rviz  RobotArrayView.rviz  camera_model.sdf  camera_model.xacro  depth_pips_hallucination.rviz  ec_pips_hallucination.rviz  transform_tester.rviz
include/: path_array_display.h  path_display_temp.h  robot_hallucination.h  robot_model_array_display.h
include/pips_visualization/: camera_pub_display.h
launch/: depth_to_points.launch  depth_visualization_nodes.launch  ec_visualization_nodes.launch  gazebo_camera.launch  transform_tester.launch
scripts/: collision_point_publisher.py  depth_plus_hallucination.py  ec_swept_volume.py  hallucinated_image_publisher.py  image_outline_publisher.py  image_overlayer.py  near_identity_viz.py  outline_to_mesh.py  path_pose_viz.py  paths_to_poses.py  pause_on_plan.py  pose_generator.py  robot_array_test.py  swept_volume_publisher.py  test_path_array.py  transform_tester.py  twist_viz.py
sdf/: free_camera.sdf  free_camera.urdf
src/: camera_pub_display.cpp  main.cpp  path_array_display.cpp  path_display_temp.cpp  point_cloud_to_mesh.cpp  pose_marker_publisher.cpp  robot_hallucination.cpp  robot_model_array_display.cpp
